# CNN-Transformer-Hybrid-Model

./: .gitignore  finanace-sentiment-model.ipynb  model.ipynb  model2.ipynb  pyproject.toml  readme.md
